--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,5 +1,5 @@
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins',sans-serif;
     margin: 0px;
 }
 
@@ -30,4 +30,12 @@ main{
 
 .pointer{
     cursor: pointer;
+}
+
+.app{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    
 }
