--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -33,16 +33,25 @@
     }
 }
 
+.btn-danger{
+
+    transition: background-color .3s ease;
+
+    &:hover{
+        background-color: darken($color: red, $amount: 15);
+    }
+}
+
 .btn-block {
     width: 100%;
 }
 
 .google-btn {
     cursor: pointer;
-    margin-top: 5px;
-    width: 100%;
+    margin-top: 10px;
+    width: 17%;
     height: 42px;
-    background-color: $google-blue;
+    
     border-radius: 2px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
 
@@ -64,13 +73,7 @@
         width: 18px;
         height: 18px;
     }
-    .btn-text {
-        float: right;
-        margin: 11px 40px 0 0;
-        color: $white;
-        font-size: 14px;
-        letter-spacing: 0.2px;
-    }
+    
     &:hover {
         box-shadow: 0 0 6px $google-blue;
     }
