--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -2,15 +2,17 @@
     display: flex;
     flex-direction: column ;
     height: 100%;
+    z-index: 999;
 }
 
 .notes__appbar{
     align-items: center;
-    background-color: $primary;
+    background: rgba(26, 25, 25, 0.7);
     color: white;
     display: flex;
     justify-content: space-between;
     padding: 10px 20px 10px 20px;
+   
 }
 
 .notes__content{
@@ -30,15 +32,15 @@
 
 .notes__input{
     color: $dark-grey;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
 .notes__textarea{
     border: none;
-    color: $dark-grey;
-    font-size: 20px;
+    color: black;
+    font-size: 17px;
     flex: 1 1 auto;
     resize: none;
 }
