--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500|Poppins:400,500&display=swap');
 @import './base/settings';
 @import './base/base';
 
